# CppUnit2Gtest

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CppUnit2Gtest.hpp  README.md  mull.yml
.github/workflows/: CI.yml  all.yml  cmake-all-tests.yml  cmake-multi-platform.yml  common_cmake.yml
cmake/: Config.cmake.in
tests/: CMakeLists.txt  CreateSymlink.cmake  GetGtest.cmake  InstallMull.sh
tests/examples/: CMakeLists.txt  Hierarchy.cpp  Migrating.cpp  MigratingSharedState.cpp  Money.cpp  README.md  Simple.cpp
tests/external_tests/: CMakeLists.txt  Martchus-cpp-utilities.cmake  README.md
tests/internal_tests/: .gitkeep  AllTestsUnity.cpp.in  CheckFailures.cpp  DeprecatedDeclareThrow.cpp  RegisteringTests.cpp  TestGettingData.cpp  TestMainClasses.cpp  TestTestData.cpp
